--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.6"
 license = { file="LICENSE" }
 keywords = ["color", "terminal", "ansi", "cli", "console", "text", "style"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 4 - Beta", # Or 5 - Production/Stable
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
@@ -35,3 +35,5 @@ classifiers = [
 Homepage = "https://github.com/cfrbal/ezcolors"
 # Bug Tracker = "https://github.com/cfrbal/ezcolors/issues"
 
+[tool.setuptools.packages.find]
+where = ["src"]
